# Fly-in

./: Makefile  README.md  lhcen.py  pyproject.toml  test.py
maps/easy/: 01_linear_path.txt  02_simple_fork.txt
src/: algo.py  connection.py  drone.py  exceptions.py  graph.py  main.py  parser.py  renderer.py  simulation.py  test.py  zone.py
