[project]
name = "fly-in"
version = "0.1.0"
description = "A discrete-event drone routing simulation system"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true